# NHunspell

./: .gitignore  README.adoc
.devcontainer/: Dockerfile  devcontainer.json
src/: BuildNativeHunspellWindows.sh  NHunspell.sln  WindowsMingwX64Toolchain.cmake  WindowsMingwX86Toolchain.cmake
src/HunspellNative/: CMakeLists.txt  DllMain.cpp  EncodingToCodePage.h  HunspellExportFunctions.cpp  HyphenExportFunctions.cpp  MemoryFile.cpp  MemoryFile.hpp  NHunspellExtensions.h  UpdateToNewHunspellSourcecode.txt  filemgr.cxx  filemgr.hxx
src/HunspellNative/hunspell/: filemgr.hxx.bak
src/HunspellNative/hyphen/: hyphen.cpp  substrings.cpp
src/NHunspellInteropTests/: NHunspellInteropTests.csproj  Program.cs
src/NHunspellInteropTests/Properties/: launchSettings.json
src/NHunspellTests/: HunspellTests.cs  NHunspellTests.csproj
src/NHunspellTests/TestData/: th_es_ES_v2.idx
